buildscript {
	ext {
		springBootVersion = '2.7.8'
		set('springCloudVersion', "2021.0.5")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id 'org.springframework.boot' version '2.7.8'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.sonarqube" version "3.4.0.2513"
}
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

jar {
	archiveBaseName = 'scsb-batch-scheduler'
	archiveVersion = '0.0.1-SNAPSHOT'
}
sourceCompatibility = 1.17
targetCompatibility = 1.17

repositories {
	mavenCentral()
}


dependencies {
	implementation fileTree(dir: '/data/commonjar', include: '*2.5.jar')
	implementation('org.springframework.boot:spring-boot-starter')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation('org.springframework.batch:spring-batch-core:4.3.4')
	implementation('org.springframework.boot:spring-boot-starter-batch')
	implementation('org.quartz-scheduler:quartz:2.3.2')
	implementation("org.springframework.batch:spring-batch-admin-manager:1.3.1.RELEASE") {
		exclude group: 'org.slf4j', module:'slf4j-log4j12';
	}
	implementation('com.thoughtworks.xstream:xstream:1.4.18')
	implementation("org.springframework.batch:spring-batch-admin-resources:1.3.1.RELEASE") {
		exclude group: 'org.slf4j', module:'slf4j-log4j12'
	}
	implementation('org.projectlombok:lombok:1.18.26')
	annotationProcessor('org.projectlombok:lombok:1.18.26')
	testImplementation('org.projectlombok:lombok:1.18.26')
	testAnnotationProcessor('org.projectlombok:lombok:1.18.26')
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
	//implementation("org.springframework.boot:spring-boot-starter-actuaor")
	implementation('org.apache.camel:camel-activemq:3.20.2')
	implementation('org.springframework.boot:spring-boot-starter-web')
	implementation('org.apache.activemq:activemq-camel:5.16.6')
	implementation('org.apache.activemq:activemq-pool:5.17.4')
	implementation('org.apache.activemq:activemq-broker:5.17.4')
	implementation('org.apache.activemq:activemq-client:5.17.4')
	implementation('org.apache.camel.springboot:camel-spring-boot-starter:3.20.2')
	implementation('org.apache.camel:camel-jms:3.20.2')
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.3'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation group: 'org.json', name: 'json', version: '20230227'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
	
	testImplementation('org.springframework.boot:spring-boot-starter-test')
	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
	testImplementation('org.springframework.batch:spring-batch-test')

	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '2.20.0'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	finalizedBy jacocoTestReport // report is always generated after tests run
	jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
    jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}


jacoco {
	toolVersion = "0.8.8"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}


task scsbBatchSchedulerJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir =  new File(home+"/scsb-javadocs/scsb-batch-scheduler");

}

/* bootJar {
	layered()
} */

jar {
	enabled = false
	archiveClassifier = '' //use empty string
}
